[gd_scene load_steps=41 format=3 uid="uid://chthbysw2urx"]

[ext_resource type="Script" path="res://ControlHandler.gd" id="1_gek20"]
[ext_resource type="Material" uid="uid://declxsoauqwu" path="res://textures/carpet.tres" id="1_rit24"]
[ext_resource type="Material" uid="uid://btlmiggm78mch" path="res://textures/walls.tres" id="2_sroe3"]
[ext_resource type="Material" uid="uid://dfsr3vj8d8pkn" path="res://textures/truck_texture.tres" id="4_nsibn"]
[ext_resource type="PackedScene" uid="uid://cgdhfi6yngwfg" path="res://scenes/Cabinet.tscn" id="5_80y8q"]
[ext_resource type="Script" path="res://DiscoLight.gd" id="7_j0w3j"]
[ext_resource type="PackedScene" uid="uid://t0cux1ieh302" path="res://scenes/NPCSpawner.tscn" id="8_2fsor"]
[ext_resource type="PackedScene" uid="uid://8nro1lwjq62r" path="res://scenes/NPC.tscn" id="9_0vols"]
[ext_resource type="PackedScene" uid="uid://etnfxnuxhvpf" path="res://scenes/FloorTile.tscn" id="9_11bsa"]
[ext_resource type="Texture2D" uid="uid://c67gisliwku7c" path="res://textures/36216-2793242736-rough asphalt.png" id="9_icamn"]
[ext_resource type="ArrayMesh" uid="uid://bqhfvbh41j2ix" path="res://models/truck.obj" id="10_u4qvj"]
[ext_resource type="Material" uid="uid://dfi7hvm02hm2v" path="res://textures/screenbeams.tres" id="12_68ogs"]
[ext_resource type="Script" path="res://scenes/Player.gd" id="14_sxsog"]
[ext_resource type="PackedScene" uid="uid://dqxyquujewfvp" path="res://scenes/HandTruck.tscn" id="15_2gk7x"]
[ext_resource type="PackedScene" uid="uid://djwfbdrt8gjp0" path="res://models/Bryce.glb" id="15_qmw2x"]
[ext_resource type="Shader" uid="uid://e44is1cn3p2u" path="res://textures/megashirt.tres" id="16_ybfs2"]
[ext_resource type="Script" path="res://engine/EngineSingletonTest.cs" id="17_vep51"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7bx5w"]

[sub_resource type="Sky" id="Sky_q7coi"]
sky_material = SubResource("ProceduralSkyMaterial_7bx5w")

[sub_resource type="Environment" id="Environment_8hkkl"]
background_mode = 2
sky = SubResource("Sky_q7coi")
sdfgi_enabled = true
sdfgi_cascades = 1
sdfgi_min_cell_size = 5.45

[sub_resource type="NavigationMesh" id="NavigationMesh_4db4d"]
vertices = PackedVector3Array(-23.25, 0.252, -29.5, -29.5, 0.252, -29.5, -29.5, 0.252, -23.25, -16.75, 0.252, -29.5, -23.25, 0.252, -29.5, -29.5, 0.252, -23.25, -16.75, 0.252, -29.5, -29.5, 0.252, -23.25, -29.5, 0.252, -16.75, -10.5, 0.252, -29.5, -29.5, 0.252, -4, -5.75, 0.252, -5.25, -5.25, 0.252, -5.75, -29.5, 0.252, -10.5, -29.5, 0.252, -4, -5.75, 0.252, -3.75, -5.75, 0.252, -5.25, -5.25, 0.252, -5.75, -3.75, 0.252, -5.75, -4, 0.252, -29.5, -10.5, 0.252, -29.5, -29.5, 0.252, -16.75, -29.5, 0.252, -10.5, -3.75, 0.252, -5.75, 4, 0.252, -5.75, 4.25, 0.252, -29.5, -4, 0.252, -29.5, 29.5, 0.252, -23.25, 29.5, 0.252, -29.5, 23, 0.252, -29.5, 29.5, 0.252, -17, 29.5, 0.252, -23.25, 23, 0.252, -29.5, 29.5, 0.252, -17, 23, 0.252, -29.5, 16.75, 0.252, -29.5, 29.5, 0.252, -10.75, 5.5, 0.252, -5.75, 5.75, 0.252, -4, 29.5, 0.252, -4.25, 29.5, 0.252, -10.75, 16.75, 0.252, -29.5, 10.5, 0.252, -29.5, 4.25, 0.252, -29.5, 4, 0.252, -5.75, 5.5, 0.252, -5.75, 10.5, 0.252, -29.5, -0.25, 0.252, 5, 0.5, 0.252, 5, 0.75, 0.252, 4.25, -0.5, 0.252, 4.25, 4.25, 0.252, -4.25, -4.25, 0.252, -4.25, -0.5, 0.252, 4.25, 0.75, 0.252, 4.25, 0.75, 0.252, 4.25, 4.25, 0.252, 4.25, 4.25, 0.252, -4.25, -4.25, 0.252, -4.25, -4.25, 0.252, 4.25, -0.5, 0.252, 4.25, 5.75, 0.252, -4, 5.75, 0.252, 4, 29.5, 0.252, 4.25, 29.5, 0.252, -4.25, -29.5, 0.252, 4.25, -5.75, 0.252, 4, -5.75, 0.252, -3.75, -29.5, 0.252, -4, -29.5, 0.252, 23, -29.5, 0.252, 29.5, -17.75, 0.252, 29.5, -29.5, 0.252, 16.75, -29.5, 0.252, 23, -17.75, 0.252, 29.5, -29.5, 0.252, 10.5, -29.5, 0.252, 16.75, -17.75, 0.252, 29.5, -5.75, 0.252, 5.25, -5.75, 0.252, 4, -29.5, 0.252, 4.25, -29.5, 0.252, 10.5, -17.75, 0.252, 29.5, -6, 0.252, 29.5, 17.75, 0.252, 29.5, 29.5, 0.252, 29.5, 29.5, 0.252, 23, 17.75, 0.252, 29.5, 29.5, 0.252, 23, 29.5, 0.252, 16.75, 17.75, 0.252, 29.5, 29.5, 0.252, 16.75, 29.5, 0.252, 10.5, 29.5, 0.252, 4.25, 5.75, 0.252, 4, 5.75, 0.252, 5.25, 6, 0.252, 29.5, 17.75, 0.252, 29.5, 29.5, 0.252, 10.5, 0.75, 0.252, 5.75, 0.5, 0.252, 5, -0.25, 0.252, 5, -0.5, 0.252, 5.75, -6, 0.252, 29.5, 6, 0.252, 29.5, -0.5, 0.252, 5.75, -5.5, 0.252, 5.75, -6, 0.252, 29.5, 6, 0.252, 29.5, 5.75, 0.252, 5.25, 5.5, 0.252, 5.75, -5.5, 0.252, 5.75, -5.75, 0.252, 5.25, -6, 0.252, 29.5, 6, 0.252, 29.5, 5.5, 0.252, 5.75, 0.75, 0.252, 5.75)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(3, 5, 4), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 9), PackedInt32Array(11, 10, 12), PackedInt32Array(12, 10, 13), PackedInt32Array(16, 15, 14), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(20, 17, 21), PackedInt32Array(21, 17, 22), PackedInt32Array(23, 26, 24), PackedInt32Array(24, 26, 25), PackedInt32Array(29, 28, 27), PackedInt32Array(32, 31, 30), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 36), PackedInt32Array(38, 37, 39), PackedInt32Array(39, 37, 40), PackedInt32Array(40, 37, 41), PackedInt32Array(41, 37, 42), PackedInt32Array(44, 43, 45), PackedInt32Array(45, 43, 46), PackedInt32Array(47, 50, 48), PackedInt32Array(48, 50, 49), PackedInt32Array(54, 53, 51), PackedInt32Array(51, 53, 52), PackedInt32Array(57, 56, 55), PackedInt32Array(60, 59, 58), PackedInt32Array(61, 64, 62), PackedInt32Array(62, 64, 63), PackedInt32Array(66, 65, 67), PackedInt32Array(67, 65, 68), PackedInt32Array(71, 70, 69), PackedInt32Array(74, 73, 72), PackedInt32Array(77, 76, 75), PackedInt32Array(79, 78, 80), PackedInt32Array(80, 78, 81), PackedInt32Array(81, 78, 82), PackedInt32Array(82, 78, 83), PackedInt32Array(86, 85, 84), PackedInt32Array(89, 88, 87), PackedInt32Array(92, 91, 90), PackedInt32Array(94, 93, 95), PackedInt32Array(95, 93, 98), PackedInt32Array(95, 98, 97), PackedInt32Array(95, 97, 96), PackedInt32Array(100, 99, 101), PackedInt32Array(101, 99, 102), PackedInt32Array(102, 99, 104), PackedInt32Array(102, 104, 103), PackedInt32Array(107, 106, 105), PackedInt32Array(110, 109, 108), PackedInt32Array(111, 113, 112), PackedInt32Array(116, 115, 114)]

[sub_resource type="BoxShape3D" id="BoxShape3D_d61mk"]
size = Vector3(2.01687, 0.6, 5.47957)

[sub_resource type="QuadMesh" id="QuadMesh_kq0j4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_clpe3"]
size = Vector3(30, 0.2, 30)

[sub_resource type="BoxMesh" id="BoxMesh_hqljy"]
size = Vector3(10, 0.2, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hon5f"]
albedo_texture = ExtResource("9_icamn")
uv1_scale = Vector3(15, 15, 15)

[sub_resource type="BoxMesh" id="BoxMesh_1ry82"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wwk8e"]
size = Vector3(10, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_bkukf"]
size = Vector3(10, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_fseyh"]
size = Vector3(4, 3, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_tn612"]
size = Vector3(4, 3, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_ddc28"]
size = Vector3(4, 3, 0.2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tswia"]
render_priority = 0
shader = ExtResource("16_ybfs2")

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qfwq7"]
animation = &"Walking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p0b17"]
animation = &"Idle"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_rtaxm"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_nkj3q"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_b2svf"]
graph_offset = Vector2(-419.38, 62.4616)
nodes/Animation/node = SubResource("AnimationNodeAnimation_p0b17")
nodes/Animation/position = Vector2(-160, 120)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_qfwq7")
"nodes/Animation 2/position" = Vector2(-160, 260)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_rtaxm")
nodes/TimeScale/position = Vector2(280, 180)
nodes/WalkOrIdle/node = SubResource("AnimationNodeBlend2_nkj3q")
nodes/WalkOrIdle/position = Vector2(80, 140)
nodes/output/position = Vector2(480, 160)
node_connections = [&"output", 0, &"TimeScale", &"TimeScale", 0, &"WalkOrIdle", &"WalkOrIdle", 0, &"Animation", &"WalkOrIdle", 1, &"Animation 2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_43byu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v275k"]
radius = 0.3
height = 1.25

[node name="Node3D2" type="Node3D"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.401948, 0.915663, 0, -0.915663, 0.401948, 0, 8.36276, 3.81262)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8hkkl")

[node name="ControlHandler" type="Node" parent="." node_paths=PackedStringArray("nav")]
script = ExtResource("1_gek20")
nav = NodePath("../NavigationRegion3D")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_4db4d")

[node name="WorldStatic" type="RigidBody3D" parent="NavigationRegion3D"]
freeze = true

[node name="Truck" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.115, 0.3, -1.777)
shape = SubResource("BoxShape3D_d61mk")

[node name="Truck" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/Truck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.426056, 0)
material_override = ExtResource("4_nsibn")
mesh = ExtResource("10_u4qvj")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/Truck/Truck"]
transform = Transform3D(1.83081, 0, 0, 0, 0.751082, 0.237941, 0, -0.197491, 0.904919, 0, 0.769138, 2.32765)
material_override = ExtResource("12_68ogs")
mesh = SubResource("QuadMesh_kq0j4")

[node name="Floor" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("BoxShape3D_clpe3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/Floor"]
material_override = ExtResource("1_rit24")
mesh = SubResource("BoxMesh_hqljy")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/Floor"]
transform = Transform3D(60, 0, 0, 0, 0.2, 0, 0, 0, 60, 0, -0.048, 0)
material_override = SubResource("StandardMaterial3D_hon5f")
mesh = SubResource("BoxMesh_1ry82")
skeleton = NodePath("../../../..")

[node name="FloorTile" parent="NavigationRegion3D/WorldStatic/Floor" instance=ExtResource("9_11bsa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
collision_layer = 2

[node name="MeshInstance3D5" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -5)
shape = SubResource("BoxShape3D_wwk8e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/MeshInstance3D5"]
material_override = ExtResource("2_sroe3")
mesh = SubResource("BoxMesh_bkukf")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D8" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 1.5, 0)
shape = SubResource("BoxShape3D_wwk8e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/MeshInstance3D8"]
material_override = ExtResource("2_sroe3")
mesh = SubResource("BoxMesh_bkukf")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D9" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 5, 1.5, 0)
shape = SubResource("BoxShape3D_wwk8e")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/MeshInstance3D9"]
material_override = ExtResource("2_sroe3")
mesh = SubResource("BoxMesh_bkukf")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D6" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, 5)
shape = SubResource("BoxShape3D_fseyh")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/MeshInstance3D6"]
material_override = ExtResource("2_sroe3")
mesh = SubResource("BoxMesh_tn612")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D7" type="CollisionShape3D" parent="NavigationRegion3D/WorldStatic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.5, 5)
shape = SubResource("BoxShape3D_ddc28")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="NavigationRegion3D/WorldStatic/MeshInstance3D7"]
material_override = ExtResource("2_sroe3")
mesh = SubResource("BoxMesh_tn612")
skeleton = NodePath("../../../..")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.128, 2.314, -4)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.128, 2.314, -4)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="OmniLight3D3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.128, 2.314, 4)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="OmniLight3D4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.128, 2.314, 4)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="headlight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.61922, 0.741111, 1.29485)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="headlight2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5345, 0.741111, 1.29485)
shadow_enabled = true
omni_range = 15.157
script = ExtResource("7_j0w3j")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.986069, -0.110578, 0.124262, 0, 0.747044, 0.664774, -0.166339, -0.655513, 0.736637, 0, 2.45728, 11.9982)
light_energy = 0.0

[node name="Cabinet" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 0.999956, 0.00938973, 0, -0.00938973, 0.999956, -7.73941, 0.689929, -4.06982)

[node name="Cabinet2" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.73941, 0.689929, -3.037)
cabType = 1

[node name="Cabinet3" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(0.866752, 0, -0.508256, 0, 1.00478, 0, 0.508256, 0, 0.866752, 2.90171, 0.187379, 0)
active = true

[node name="Cabinet4" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.64408, 2.66348, -0.974283)
active = true

[node name="Cabinet5" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47273, 0.689929, -4.06982)

[node name="Cabinet6" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47273, 0.689929, -3.037)
cabType = 1

[node name="Cabinet7" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47273, 0.689929, -2.01192)

[node name="Cabinet8" parent="." instance=ExtResource("5_80y8q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.47273, 0.689929, -0.974283)

[node name="NPCSpawner" parent="." instance=ExtResource("8_2fsor")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.65649, 6.38108)
NPCscene = ExtResource("9_0vols")
maxSpawns = 1

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.93537, 0)
collision_layer = 2
floor_snap_length = 0.32
script = ExtResource("14_sxsog")

[node name="Body" type="Node3D" parent="Player"]

[node name="Body" parent="Player/Body" instance=ExtResource("15_qmw2x")]

[node name="GeneralSkeleton" parent="Player/Body/Body/Armature" index="0"]
bones/0/position = Vector3(-0.00407782, 0.927735, 0.0377665)
bones/0/rotation = Quaternion(-0.0474616, 0.0113597, -0.00190054, 0.998807)
bones/1/rotation = Quaternion(0.010958, 0.000523273, 0.00137277, 0.999939)
bones/2/rotation = Quaternion(0.0234949, 0.00148762, 0.00128883, 0.999722)
bones/3/rotation = Quaternion(0.023459, 0.00141777, 0.00130463, 0.999723)
bones/4/rotation = Quaternion(-0.0172849, -0.0026224, 0.0122217, 0.999772)
bones/5/rotation = Quaternion(-0.0163821, 0.00247173, 0.00627081, 0.999843)
bones/7/rotation = Quaternion(0.507366, 0.416936, 0.547173, -0.518985)
bones/8/rotation = Quaternion(0.200455, 0.84917, -0.484237, -0.0651313)
bones/9/rotation = Quaternion(0.0741843, -0.700687, 0.074335, 0.705697)
bones/10/rotation = Quaternion(0.0888281, 0.693064, -0.0484875, 0.713737)
bones/11/position = Vector3(-0.0291022, 0.0264378, 0.0182016)
bones/11/rotation = Quaternion(-0.107059, -0.172079, 0.0253591, 0.97892)
bones/12/rotation = Quaternion(0.00510958, 0.775904, 0.00137635, 0.630828)
bones/13/rotation = Quaternion(0.439272, 0.152017, 0.0588092, 0.883443)
bones/14/rotation = Quaternion(-5.96046e-08, 5.96046e-08, 0, 1)
bones/15/position = Vector3(-0.0417661, 0.094924, 0.0132105)
bones/15/rotation = Quaternion(0.517292, 0.0895784, -0.0960394, 0.845672)
bones/16/rotation = Quaternion(0.792726, 0.184822, -0.178839, 0.552669)
bones/17/rotation = Quaternion(0.36314, 0.0887095, -0.0809804, 0.92396)
bones/18/rotation = Quaternion(-2.98023e-08, 2.98023e-08, 2.98023e-08, 1)
bones/19/position = Vector3(-0.0169151, 0.100205, 0.00740204)
bones/19/rotation = Quaternion(0.563779, 0.0374387, -0.105167, 0.818347)
bones/20/rotation = Quaternion(0.811351, 0.112907, -0.185966, 0.542567)
bones/21/rotation = Quaternion(0.417986, 0.0557166, -0.0964215, 0.901602)
bones/22/rotation = Quaternion(-1.49012e-08, 0, -1.49012e-08, 1)
bones/23/position = Vector3(0.00457622, 0.102555, 0.00462103)
bones/23/rotation = Quaternion(0.57492, 0.0126179, -0.138137, 0.806366)
bones/24/rotation = Quaternion(0.735215, 0.0284272, -0.185048, 0.651466)
bones/25/rotation = Quaternion(0.346531, 0.00112008, -0.0893813, 0.93377)
bones/26/rotation = Quaternion(-4.47035e-08, -1.49012e-08, -1.49012e-08, 1)
bones/27/position = Vector3(0.0287526, 0.0920776, 0.00508746)
bones/27/rotation = Quaternion(0.614135, 0.0693001, -0.168181, 0.767952)
bones/28/rotation = Quaternion(0.705313, 0.0919817, -0.131797, 0.690437)
bones/29/rotation = Quaternion(0.387565, 0.0427847, -0.0897692, 0.916463)
bones/30/rotation = Quaternion(0, 0, 5.96046e-08, 1)
bones/31/rotation = Quaternion(0.506042, -0.439111, -0.546284, -0.502669)
bones/32/rotation = Quaternion(-0.13974, 0.840046, -0.523897, 0.0180946)
bones/33/rotation = Quaternion(0.0497346, 0.703671, -0.0498187, 0.70703)
bones/34/rotation = Quaternion(0.119102, -0.732062, -0.05415, 0.668557)
bones/35/position = Vector3(0.0293606, 0.0269268, 0.0181979)
bones/35/rotation = Quaternion(-0.0062003, 0.0842747, -0.0147496, 0.996314)
bones/36/rotation = Quaternion(-0.00514213, -0.809464, 0.0383814, 0.585892)
bones/37/rotation = Quaternion(0.287906, -0.100491, 0.0147829, 0.952257)
bones/38/rotation = Quaternion(-1.49012e-08, 4.47035e-08, 0, 1)
bones/39/position = Vector3(0.0416546, 0.0955886, 0.0128452)
bones/39/rotation = Quaternion(0.560346, -0.103137, 0.109642, 0.814465)
bones/40/rotation = Quaternion(0.856522, -0.203865, 0.188525, 0.435048)
bones/41/rotation = Quaternion(0.225934, -0.0515302, 0.0501632, 0.971485)
bones/42/rotation = Quaternion(0, 0, -2.98023e-08, 1)
bones/43/position = Vector3(0.0165071, 0.0988999, 0.00658095)
bones/43/rotation = Quaternion(0.56908, -0.044589, 0.118974, 0.812407)
bones/44/rotation = Quaternion(0.740324, -0.0959616, 0.166752, 0.644131)
bones/45/rotation = Quaternion(0.344255, -0.0380034, 0.0788325, 0.934788)
bones/46/rotation = Quaternion(-2.98023e-08, 2.98023e-08, -2.98023e-08, 1)
bones/47/position = Vector3(-0.00461203, 0.102175, 0.00400118)
bones/47/rotation = Quaternion(0.562939, -0.0157906, 0.137592, 0.814812)
bones/48/rotation = Quaternion(0.683199, -0.0266944, 0.167494, 0.710262)
bones/49/rotation = Quaternion(0.251078, 0.00481984, 0.0638484, 0.965847)
bones/50/rotation = Quaternion(-1.49012e-08, 0, 1.49012e-08, 1)
bones/51/position = Vector3(-0.0286698, 0.0929756, 0.00525639)
bones/51/rotation = Quaternion(0.539108, -0.0281117, 0.122845, 0.832755)
bones/52/rotation = Quaternion(0.717274, -0.0682957, 0.163535, 0.673877)
bones/53/rotation = Quaternion(0.397917, -0.0396402, 0.0900906, 0.912126)
bones/54/rotation = Quaternion(5.96046e-08, 0, 0, 1)
bones/55/rotation = Quaternion(0.0864399, 0.100642, 0.986536, -0.0956354)
bones/56/rotation = Quaternion(0.0521205, 0.962574, -0.260815, -0.0520654)
bones/57/rotation = Quaternion(-0.0465734, 0.618073, -0.784461, -0.0209224)
bones/58/rotation = Quaternion(1.56947e-08, 0.999992, 0.00409888, 4.13995e-08)
bones/60/rotation = Quaternion(-0.127054, 0.109806, 0.98351, 0.0671365)
bones/61/rotation = Quaternion(9.31564e-05, 0.960402, -0.273848, 0.051345)
bones/62/rotation = Quaternion(0.0294943, 0.613614, -0.788351, -0.033333)
bones/63/rotation = Quaternion(2.76222e-08, 0.999965, 0.00834385, -1.50362e-07)

[node name="Ch42_Shirt" parent="Player/Body/Body/Armature/GeneralSkeleton" index="3"]
surface_material_override/0 = SubResource("ShaderMaterial_tswia")

[node name="AnimationPlayer" parent="Player/Body/Body" index="1"]
next/Walking = &"Walking"
blend_times = [&"Idle", &"Walking", 0.5, &"Walking", &"Idle", 2.0]

[node name="AnimationTree" type="AnimationTree" parent="Player/Body/Body"]
tree_root = SubResource("AnimationNodeBlendTree_b2svf")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/TimeScale/scale = 1.3
parameters/WalkOrIdle/blend_amount = 0.0

[node name="TransformHelper" type="RemoteTransform3D" parent="Player/Body"]

[node name="Area3D" type="Area3D" parent="Player/Body"]
collision_mask = 9

[node name="InteractionCollider" type="CollisionShape3D" parent="Player/Body/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6619, 0.506897)
shape = SubResource("SphereShape3D_43byu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.625, 0)
shape = SubResource("CapsuleShape3D_v275k")

[node name="HandTruck" parent="." instance=ExtResource("15_2gk7x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14993, 0.1, 0.318555)

[node name="SingletonEngineNode" type="Node" parent="."]
script = ExtResource("17_vep51")

[connection signal="body_entered" from="Player/Body/Area3D" to="Player" method="_on_area_3d_body_entered" flags=18]
[connection signal="body_exited" from="Player/Body/Area3D" to="Player" method="_on_area_3d_body_exited" flags=18]

[editable path="Player/Body/Body"]
